# bcvk-fork

./: .bootc-dev-infra-commit.txt  .dockerignore  .gitignore  BUG.md  Cargo.toml  Justfile  Makefile  README.md  bcvk.rb
.config/: nextest.toml
.github/workflows/: main-c10s.yml  main.yml  release.yml  scheduled-release.yml
contrib/packaging/: bcvk.spec
crates/integration-tests/: Cargo.toml
crates/kit/: Cargo.toml
crates/kit/scripts/: entrypoint.sh
crates/kit/src/: arch.rs  cache_metadata.rs  cli_json.rs  cloud_init.rs  cmdext.rs  cmdfdext.rs  common_opts.rs  container_entrypoint.rs  cpio.rs  credentials.rs  domain_list.rs  envdetect.rs  ephemeral.rs  ephemeral_stub.rs  hostexec.rs  images.rs  install_options.rs  lib.rs  libvirt_upload_disk.rs  main.rs  osbuild_disk.rs  podman.rs  qemu.rs  qemu_img.rs  repart.rs  run_ephemeral.rs  run_ephemeral_ssh.rs  ssh.rs  sshcred.rs  status_monitor.rs  supervisor_status.rs  to_disk.rs  utils.rs  xml_utils.rs
crates/kit/src/libvirt/: base_disks.rs  base_disks_cli.rs  create.rs  domain.rs  inspect.rs  lifecycle_monitor.rs  list.rs  list_volumes.rs  mod.rs  print_firmware.rs  rm.rs  rm_all.rs  run.rs  secureboot.rs  ssh.rs  start.rs  status.rs  stop.rs  upload.rs
crates/kit/src/project/: config.rs  down.rs  init.rs  ls.rs  mod.rs  rm.rs  ssh.rs  up.rs  vm_state.rs
crates/kit/src/units/: bcvk-copy-units.service  bcvk-etc-overlay.service  bcvk-journal-stream.service  bcvk-var-ephemeral.service
docs/: HACKING.md
docs/src/: HACKING.md  building.md  contributing.md  disk-images.md  ephemeral-run.md  ephemeral-ssh.md  image-management.md  installation.md  introduction.md  libvirt-advanced.md  libvirt-manage.md  libvirt-run.md  (+2 more)
(+48 files in other folders)
