[package]
name = "bcvk"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
const_format = { workspace = true }
color-eyre = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
clap_mangen = { version = "0.2.20", optional = true }
data-encoding = { version = "2.9" }
dirs = "5.0"
fn-error-context = { version = "0.2" }
indicatif = "0.17"
notify = "6.1"
thiserror = "1.0"
rustix = { "version" = "1", features = ["thread", "net", "fs", "pipe", "system", "process", "mount"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }
shlex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3"
uuid = { version = "1.10", features = ["v4"] }
xshell = { workspace = true }
yaml-rust2 = "0.9"
serde_yaml = "0.9"
rand = { workspace = true }
cfg-if = { workspace = true }
indoc = "2.0.6"
regex = "1.10"
itertools = "0.14.0"
nix = { version = "0.29", features = ["socket"] }
libc = "0.2"
camino = "1.1.12"
comfy-table = "7.1"
strum = { version = "0.26", features = ["derive"] }
quick-xml = "0.36"
# cap-std-ext works on macOS with the patch
cap-std-ext = { version = "4" }

[dev-dependencies]
similar-asserts = "1.5"

[features]
# Implementation detail of man page generation.
docgen = ["clap_mangen"]

# Linux-only dependencies
[target.'cfg(target_os = "linux")'.dependencies]
vsock = "0.5"

